# Opus-Mt_Bidirectional_Translation

./: README.md  myct.ipynb
Helsinki_Marian_NMT_Finetune/data/: train_data.tsv  train_sentencepiece_texts.txt
Helsinki_Marian_NMT_Finetune/model/Helsinki-opus-mt-zh-en/: vocab.json
Helsinki_Marian_NMT_Finetune/tokenizer/: zh_en_mix_65001.model  zh_en_mix_65001.vocab
Helsinki_Marian_NMT_Finetune/trainer/: sentencepiece_tokenizer.py  spm_to_hf.py  train_sentencepiece.py  trainer_hf.py  trainer_sentencepiece.py
Helsinki_Marian_NMT_Finetune/utils/: Finetuning_Helsinki_Marian_NMT_models.ipynb  score.py
myct/: CMakeLists.txt  main.cpp
myct/lib/: libctranslate2.so.4
myct/lib/cmake/ctranslate2/: ctranslate2ConfigVersion.cmake  ctranslate2Targets-release.cmake  ctranslate2Targets.cmake
